tests/parser/tests/cases/should_fail/dangling_parenthesis/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:17
1 |   k := (a) + ((b)));
  |                   ^ here
  = note: unexpectedly reached the end of input.
  = help: consider adding a `;`
